[package]
name = "hbbft-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
# tokio = "~0.1.13"
# tokio-codec = "~0.1.1"
# tokio-io = "~0.1.9"
warp = "0.3.2"
rocksdb = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.11"
futures = "0.3.15"
eyre = "0.6.8"

bincode = "1.3.3"
hex = "0.4.3"

tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.23.7"

hbbft = {git = "https://github.com/fedimint/hbbft"}