[package]
name = "hbbft-node"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "peer_node"
path = "src/bin/peer_node.rs"

[features]
# Used for debugging memory usage.
exit_upon_epoch_1000 = []


[dependencies]
log = "0.4"
env_logger = "0.5"
clap = "2"
failure = "0.1"
crossbeam = "0.4"
crossbeam-channel = "0.2"
chrono = "0.4"
rust-crypto = "*"
num-traits = "*"
num-bigint = "*"
colored = "*"
itertools = "*"
pairing = "*"
rand = "0.6"
serde = "1"
serde_bytes = "~0.10.4"
serde_derive = "1"
signifix = "0.9"
futures = "0.1.31"
futures-util = "0.3.11"

tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }

bincode = "1"
tokio-serde = "0.2"
tokio-serde-bincode = "0.1"
bytes = "~0.4.10"
uuid = { version = "0.6", features = ["v4", "serde"] }
byteorder = "1"
parking_lot = "0.6"
clear_on_drop = "0.2"
warp = "0.3.2"
hbbft = { git = "https://github.com/VegeBun-csj/hbbft.git", branch = "master" }

[profile.release]
debug = true
debug-assertions = true